8114
> We probably ought to issue a warning when a overriding type doesn't conform to its overriden type

+1. I'm also deeply confused by the suggestion in this warning:
{code}
scala> trait A { type A = Int }; class B extends A { type A = String }
<console>:10: error: overriding type A in trait A, which equals Int;
 type A needs `override' modifier
       trait A { type A = Int }; class B extends A { type A = String }
                                                          ^
{code}
Does it ever make sense to override a type alias? I can still understand `override type` for an abstract type, but not there.
